save notebook changes [issue #17]

--- a/notebooks/data-manipulation.ipynb
+++ b/notebooks/data-manipulation.ipynb
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "e55539a5",
    "metadata": {},
    "outputs": [
@@ -566,6 +566,9 @@
     "\n",
     "# Adjusting x-axis to avoid scientific notation\n",
     "plt.gca().xaxis.set_major_formatter(ticker.FuncFormatter(lambda x, _: f'{x:,.0f}'))\n",
+    "\n",
+    "plt.savefig('../assets/car_value_no_outlier_histplot.png')\n",
+    "\n",
     "\n",
     "plt.grid(True)\n"
    ]
@@ -689,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "c6e9e7c9-8237-4ccb-9c59-58e848544310",
    "metadata": {},
    "outputs": [
@@ -714,6 +717,8 @@
     "ax.set_title('Distribution of brands ranked')\n",
     "ax.set_xlabel('Rank of brands')\n",
     "ax.set_ylabel('Frequency')\n",
+    "\n",
+    "plt.savefig('../assets/brands_rank.png')\n",
     "\n",
     "plt.show()"
    ]
@@ -1074,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "05014906",
    "metadata": {},
    "outputs": [
@@ -1095,6 +1100,8 @@
     "\n",
     "fipe_data['engine'].value_counts().plot(kind='bar', ax=axes[0], title='Engine Distribution')\n",
     "fipe_data['category'].value_counts().plot(kind='bar', ax=axes[1], title='Category Distribution')\n",
+    "\n",
+    "plt.savefig('../assets/engine_category_distribution.png')\n",
     "\n",
     "plt.tight_layout()"
    ]
