--- a/notebooks/data-manipulation.ipynb
+++ b/notebooks/data-manipulation.ipynb
@@ -3298,6 +3298,386 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "bf9adeae-ec80-4782-858b-d990681b9472",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PC_1</th>\n",
+       "      <th>PC_2</th>\n",
+       "      <th>PC_3</th>\n",
+       "      <th>PC_4</th>\n",
+       "      <th>PC_5</th>\n",
+       "      <th>PC_6</th>\n",
+       "      <th>PC_7</th>\n",
+       "      <th>PC_8</th>\n",
+       "      <th>PC_9</th>\n",
+       "      <th>PC_10</th>\n",
+       "      <th>...</th>\n",
+       "      <th>PC_16</th>\n",
+       "      <th>PC_17</th>\n",
+       "      <th>PC_18</th>\n",
+       "      <th>PC_19</th>\n",
+       "      <th>PC_20</th>\n",
+       "      <th>PC_21</th>\n",
+       "      <th>PC_22</th>\n",
+       "      <th>PC_23</th>\n",
+       "      <th>tsne-2d-one</th>\n",
+       "      <th>tsne-2d-two</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.15</td>\n",
+       "      <td>-0.18</td>\n",
+       "      <td>-0.29</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>-0.17</td>\n",
+       "      <td>-0.09</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>-0.19</td>\n",
+       "      <td>-0.41</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>-0.14</td>\n",
+       "      <td>-0.05</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>-0.24</td>\n",
+       "      <td>-0.01</td>\n",
+       "      <td>48.50</td>\n",
+       "      <td>-25.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1.26</td>\n",
+       "      <td>-0.15</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>-0.04</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>-0.08</td>\n",
+       "      <td>-0.32</td>\n",
+       "      <td>-0.11</td>\n",
+       "      <td>-0.05</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>-0.16</td>\n",
+       "      <td>-0.14</td>\n",
+       "      <td>-0.30</td>\n",
+       "      <td>-0.08</td>\n",
+       "      <td>-0.49</td>\n",
+       "      <td>-0.20</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>-90.32</td>\n",
+       "      <td>-28.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1.26</td>\n",
+       "      <td>-0.15</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>-0.04</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>-0.08</td>\n",
+       "      <td>-0.32</td>\n",
+       "      <td>-0.11</td>\n",
+       "      <td>-0.05</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>-0.16</td>\n",
+       "      <td>-0.14</td>\n",
+       "      <td>-0.30</td>\n",
+       "      <td>-0.08</td>\n",
+       "      <td>-0.49</td>\n",
+       "      <td>-0.20</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>-88.13</td>\n",
+       "      <td>-29.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-1.15</td>\n",
+       "      <td>-0.14</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>-0.09</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>-0.06</td>\n",
+       "      <td>-0.24</td>\n",
+       "      <td>-0.06</td>\n",
+       "      <td>-0.04</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.12</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>-0.17</td>\n",
+       "      <td>-0.07</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>-0.08</td>\n",
+       "      <td>-0.05</td>\n",
+       "      <td>-87.00</td>\n",
+       "      <td>-22.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.08</td>\n",
+       "      <td>-0.08</td>\n",
+       "      <td>-0.27</td>\n",
+       "      <td>-0.06</td>\n",
+       "      <td>-0.14</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>-0.07</td>\n",
+       "      <td>-0.08</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-0.07</td>\n",
+       "      <td>-0.07</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>-0.14</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>33.56</td>\n",
+       "      <td>-30.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2056</th>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>-0.07</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.32</td>\n",
+       "      <td>-0.10</td>\n",
+       "      <td>-0.38</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>-0.45</td>\n",
+       "      <td>-0.10</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>17.62</td>\n",
+       "      <td>-2.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2057</th>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>-0.17</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>-0.19</td>\n",
+       "      <td>-0.01</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>-0.06</td>\n",
+       "      <td>-0.04</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>-0.08</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>-0.11</td>\n",
+       "      <td>-0.01</td>\n",
+       "      <td>10.93</td>\n",
+       "      <td>-9.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2058</th>\n",
+       "      <td>0.23</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>-0.25</td>\n",
+       "      <td>-0.79</td>\n",
+       "      <td>-0.23</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>-0.32</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>-0.29</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>-0.32</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>23.65</td>\n",
+       "      <td>57.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2059</th>\n",
+       "      <td>0.55</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-0.01</td>\n",
+       "      <td>-0.01</td>\n",
+       "      <td>-0.05</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>-0.24</td>\n",
+       "      <td>-0.17</td>\n",
+       "      <td>-0.15</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>3.99</td>\n",
+       "      <td>-4.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2060</th>\n",
+       "      <td>0.47</td>\n",
+       "      <td>-0.75</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>-0.24</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>-0.10</td>\n",
+       "      <td>-0.31</td>\n",
+       "      <td>-0.16</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>-0.28</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>36.66</td>\n",
+       "      <td>-75.54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2061 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      PC_1  PC_2  PC_3  PC_4  PC_5  PC_6  PC_7  PC_8  PC_9  PC_10  ...  PC_16  \\\n",
+       "0     0.15 -0.18 -0.29  0.05 -0.17 -0.09  0.17 -0.19 -0.41   0.51  ...   0.07   \n",
+       "1    -1.26 -0.15  0.17 -0.04  0.04 -0.08 -0.32 -0.11 -0.05   0.00  ...   0.02   \n",
+       "2    -1.26 -0.15  0.17 -0.04  0.04 -0.08 -0.32 -0.11 -0.05   0.00  ...   0.02   \n",
+       "3    -1.15 -0.14  0.15 -0.09  0.04 -0.06 -0.24 -0.06 -0.04  -0.03  ...  -0.12   \n",
+       "4     0.08 -0.08 -0.27 -0.06 -0.14  0.01  0.02 -0.02 -0.07  -0.08  ...   0.00   \n",
+       "...    ...   ...   ...   ...   ...   ...   ...   ...   ...    ...  ...    ...   \n",
+       "2056  0.58  0.12  0.90  0.02 -0.02 -0.07  0.01  0.00  0.32   0.39  ...  -0.32   \n",
+       "2057  0.61  0.02  0.80  0.14 -0.02 -0.17  0.18 -0.19 -0.01   0.83  ...   0.06   \n",
+       "2058  0.23  0.75  0.30 -0.25 -0.79 -0.23  0.03 -0.32  0.57  -0.03  ...   0.19   \n",
+       "2059  0.55  0.14  0.87  0.02  0.00 -0.01 -0.01 -0.05  0.36   0.22  ...   0.13   \n",
+       "2060  0.47 -0.75  0.16  0.14  0.17  0.31 -0.24  0.11  0.83   0.35  ...   0.36   \n",
+       "\n",
+       "      PC_17  PC_18  PC_19  PC_20  PC_21  PC_22  PC_23  tsne-2d-one  \\\n",
+       "0     -0.14  -0.05   0.09   0.09   0.08  -0.24  -0.01        48.50   \n",
+       "1     -0.16  -0.14  -0.30  -0.08  -0.49  -0.20   0.21       -90.32   \n",
+       "2     -0.16  -0.14  -0.30  -0.08  -0.49  -0.20   0.21       -88.13   \n",
+       "3      0.02  -0.17  -0.07   0.03   0.03  -0.08  -0.05       -87.00   \n",
+       "4     -0.07  -0.07   0.07   0.10   0.05  -0.14   0.03        33.56   \n",
+       "...     ...    ...    ...    ...    ...    ...    ...          ...   \n",
+       "2056  -0.10  -0.38   0.37  -0.45  -0.10   0.03   0.08        17.62   \n",
+       "2057  -0.06  -0.04  -0.03  -0.08   0.04  -0.11  -0.01        10.93   \n",
+       "2058   0.42  -0.29   0.14   0.04   0.34  -0.32   0.73        23.65   \n",
+       "2059   0.11  -0.24  -0.17  -0.15   0.35  -0.33   0.67         3.99   \n",
+       "2060   0.27  -0.10  -0.31  -0.16   0.41  -0.28   0.50        36.66   \n",
+       "\n",
+       "      tsne-2d-two  \n",
+       "0          -25.49  \n",
+       "1          -28.83  \n",
+       "2          -29.77  \n",
+       "3          -22.99  \n",
+       "4          -30.75  \n",
+       "...           ...  \n",
+       "2056        -2.93  \n",
+       "2057        -9.67  \n",
+       "2058        57.41  \n",
+       "2059        -4.98  \n",
+       "2060       -75.54  \n",
+       "\n",
+       "[2061 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_tsne.to_csv("
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ede7a4b-a3b7-4191-a2ad-9b382c45788a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "56068a24-3182-49cd-a738-f344121bc142",
    "metadata": {},
