Fixing TSNE plot

--- a/notebooks/data-manipulation.ipynb
+++ b/notebooks/data-manipulation.ipynb
@@ -6226,6 +6226,133 @@
    "source": [
     "pd.DataFrame(X_tsne_v2).to_csv('../data/output/car_models_TSNE.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "0654adc0-bf75-4729-80f3-2877bd592f05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RangeIndex(start=0, stop=2061, step=1)"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(X_tsne_v2).index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f81ad484-d73b-4f12-804b-a82c596bf39e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@st.cache_data\n",
+    "def load_data():\n",
+    "    \"\"\"Load all dataframe from repo\"\"\"\n",
+    "\n",
+    "    fipe_features_PCA_path = \"https://raw.githubusercontent.com/pietro-bottega/car_depreciation/refs/heads/issue22/data/output/fipe_features_PCA.csv\"\n",
+    "    fipe_features_path = \"https://raw.githubusercontent.com/pietro-bottega/car_depreciation/refs/heads/issue22/data/output/fipe_features.csv\"\n",
+    "    fipe_data_path = \"https://raw.githubusercontent.com/pietro-bottega/car_depreciation/refs/heads/issue22/data/output/fipe_data.csv\"\n",
+    "    TSNE_path = \"https://raw.githubusercontent.com/pietro-bottega/car_depreciation/refs/heads/issue22/data/output/car_models_TSNE.csv\"\n",
+    "\n",
+    "    try:\n",
+    "        fipe_features_PCA = pd.read_csv(fipe_features_PCA_path, encoding='latin1')\n",
+    "        fipe_features = pd.read_csv(fipe_features_path, encoding='latin1')\n",
+    "        fipe_data = pd.read_csv(fipe_data_path, encoding='latin1')\n",
+    "        car_models_TSNE = pd.read_csv(TSNE_path, encoding='latin1')\n",
+    "        return fipe_features_PCA, fipe_features, fipe_data, car_models_TSNE\n",
+    "    except Exception as e:\n",
+    "        st.error(f\"Error loading repo data: {e}\")\n",
+    "        return None, None, None\n",
+    "\n",
+    "fipe_features_PCA, fipe_features, fipe_data, car_models_TSNE = load_data()\n",
+    "\n",
+    "# Model training\n",
+    "\n",
+    "@st.cache_resource\n",
+    "def get_knn_model(data_pca):\n",
+    "    \"\"\"Creates and trains the model\"\"\"\n",
+    "    if data_pca is not None:\n",
+    "        knn_model = NearestNeighbors(n_neighbors=100, metric='euclidean')\n",
+    "        knn_model.fit(data_pca)\n",
+    "        return knn_model\n",
+    "    return None\n",
+    "\n",
+    "if fipe_features_PCA is not None and fipe_features is not None and fipe_data is not None:\n",
+    "    knn_model = get_knn_model(fipe_features_PCA)\n",
+    "else:\n",
+    "    knn_model = None\n",
+    "\n",
+    "# Complementary functions\n",
+    "\n",
+    "def car_selector(car_index: int):\n",
+    "    \"\"\"Returns data from selected car based on index\"\"\"\n",
+    "    selected_car_loc = fipe_features.iloc[car_index]\n",
+    "    selected_car_filter = selected_car_loc[['modelo','marca']]\n",
+    "    return pd.DataFrame(selected_car_loc[['modelo','marca']]).T\n",
+    "\n",
+    "def get_latest_value(group):\n",
+    "    \"\"\"Gets latest value from a group of car models\"\"\"\n",
+    "    sorted_group = group.sort_values(by=['anoref','mesref', 'anomod'], ascending=[False, False,False])\n",
+    "    return sorted_group.iloc[0]['valor']\n",
+    "\n",
+    "def cars_finder(car_index: int):\n",
+    "    \"\"\"\n",
+    "    Performs KNN to find nearest neighboors.\n",
+    "    Creates a table with top 3 models and their prices.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    target_car_features = fipe_features_PCA.iloc[[car_index]]\n",
+    "    distances, indices = knn_model.kneighbors(target_car_features)\n",
+    "\n",
+    "    indices = indices[0]\n",
+    "    distances = distances[0]\n",
+    "\n",
+    "    selected_cars = fipe_features.loc[indices]\n",
+    "    selected_cars['distance'] = distances\n",
+    "\n",
+    "    brand_mask = selected_cars['marca'] != selected_cars.iloc[0]['marca']\n",
+    "    selected_cars_brands = selected_cars[brand_mask].head(5)\n",
+    "\n",
+    "    models_list = selected_cars_brands['modelo_id'].tolist()\n",
+    "    fipe_data_filtered = fipe_data[fipe_data['modelo_id'].isin(models_list)]\n",
+    "\n",
+    "    model_latest_values = pd.DataFrame(fipe_data_filtered.groupby('modelo_id').apply(get_latest_value, include_groups=False), columns=['price'])\n",
+    "    final_view = pd.merge(selected_cars_brands, model_latest_values, on='modelo_id', how = 'left')\n",
+    "\n",
+    "    return final_view[['modelo','marca','distance','price']]\n",
+    "\n",
+    "def plot_tsne_chart_v2(target_index, similar_indices):\n",
+    "    \"\"\"Creates and returns a plot with t-SNE 2d.\"\"\"\n",
+    "    fig, ax = plt.subplots(figsize=(12, 9))\n",
+    "\n",
+    "    # Plotting all models\n",
+    "    ax.scatter(car_models_TSNE['0'], car_models_TSNE['1'], c='lightgray', alpha=0.5, label='Other models')\n",
+    "\n",
+    "    # Highlight 5 similar models\n",
+    "    ax.scatter(car_models_TSNE.iloc[similar_indices]['0'], car_models_TSNE.iloc[similar_indices]['1'], c='orange', s=60, label='Similar models')\n",
+    "\n",
+    "    # Highlights model select\n",
+    "    ax.scatter(car_models_TSNE.iloc[target_index]['0'], car_models_TSNE.iloc[target_index]['1'], c='red', s=120, label='Selected model')\n",
+    "\n",
+    "    ax.set_title(\"Car models 2D t-SNE components\", fontsize=16)\n",
+    "    ax.set_xlabel(\"t-SNE Component 1\")\n",
+    "    ax.set_ylabel(\"t-SNE Component 2\")\n",
+    "    ax.legend()\n",
+    "    ax.set_xticks([])\n",
+    "    ax.set_yticks([])\n",
+    "\n",
+    "    return fig\n"
+   ]
   }
  ],
  "metadata": {
